[package]
name    = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow     = "1.0.97"
clap       = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
form       = "0.12.1"
log        = "0.4.26"
semver     = "1.0.26"
strum      = { version = "0.27.1", features = ["derive"] }
svd2rust   = { version = "0.36.0", features = ["serde", "yaml"], default-features = false }
svdtools   = "0.4.4"
toml_edit  = "0.22.24"
